  from time-outs and connection errors.

- Add ``loaded`` property on Form, a Deferred so clients can check whether
  loading has finished. This is mainly helpful for tests, e.g.::
      selenium.waitForEval(
          '$("#jsform").data("form") && '
          '$("#jsform").data("form").loaded.state()', '"resolved"')

- Expose the ``get_template`` function for reuse outside the Form class.


1.1 (2014-04-07)
================

- Propagate save message of server using ``after-save`` trigger.

- Added infrastructure for displaying and clearing status messages, use it for
  announcing HTTP faults during AJAX calls.

- Display and clear field-related errors both at the widget and via status
  messages.

- When saving data, count anything but a JSON response with a status value of
  "success" as an error. Give up completely after an incomprehensible
  response, retry on connection errors either after the next successful server
  access for any other field, or when requested by a call to ``retry()``.

- Added an API method ``save_remaining()`` that causes any fields to be saved
  that have not been modified so far. While this should only save the initial
  values loaded from the server, it is useful to apply the same validation and
  error handling to all fields.

- Added an API method ``when_saved(retry)`` that returns a promise that
  aggregates any pending and completed save calls, either propagating the
  retry behaviour of single fields (the default) or failing on server errors.

- Provide a visual clue and status message while saving a field.

- Some refactoring to improve code readability.

- Made code pass jshint check.

- Made default and currently not overrideable status message behaviour
  compatible to bootstrap 3

- Properly unsubscribe change handlers when updating fields.

- Added simple localization.


1.0 (2013-12-13)
================

- Remove console calls as they are not understood by all browsers.


0.8 (2013-12-10)
================
